force-app/main/default/objects/Job_Application_Note__c/Job_Application_Note__c.object-meta.xml
<CustomObject>
    <description>For holding Notes entries for Job Applications</description>
    <label>Job Application Note</label>
    <nameField>
        <label>JA Note</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Application Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>