force-app/main/default/objects/Job_Application_Note__c/fields/Entry__c.field-meta.xml
<CustomField>
    <fullName>Entry__c</fullName>
    <description>The note entry</description>
    <inlineHelpText>The note entry</inlineHelpText>
    <label>Entry</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>