force-app/main/default/objects/Job_Application_Note__c/fields/Entry_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date_Time__c</fullName>
    <description>The date and time on which the entry was made</description>
    <inlineHelpText>The date and time on which the entry was made</inlineHelpText>
    <label>Entry Date/Time</label>
    <type>DateTime</type>
</CustomField>