force-app/main/default/objects/Job_Application_Note__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <description>The Job Application record to which this note belongs</description>
    <inlineHelpText>The Job Application record to which this note belongs</inlineHelpText>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Notes</relationshipLabel>
    <relationshipName>JA_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>